--- a/MDK-ARM/test/test.build_log.htm
+++ b/MDK-ARM/test/test.build_log.htm
@@ -28,43 +28,27 @@ Project File Date:  09/08/2025
 *** Using Compiler 'V5.06 update 7 (build 960)', folder: 'D:\keil5\ARM\ARMCC\Bin'
 Rebuild target 'test'
 assembling startup_stm32f407xx.s...
-compiling stm32f4xx_hal_timebase_tim.c...
-compiling stm32f4xx_hal_flash.c...
-compiling stm32f4xx_hal_rcc_ex.c...
-compiling tim.c...
-compiling stm32f4xx_hal_flash_ramfunc.c...
-compiling gpio.c...
-compiling stm32f4xx_it.c...
-compiling calc.c...
 compiling key_state_machine.c...
-compiling main.c...
-compiling stm32f4xx_hal_flash_ex.c...
-compiling stm32f4xx_hal_msp.c...
+compiling stm32f4xx_hal_flash.c...
+compiling tim.c...
+compiling calc.c...
 compiling usart.c...
 compiling stm32f4xx_hal_tim_ex.c...
 compiling stm32f4xx_hal_rcc.c...
+compiling stm32f4xx_hal_flash_ramfunc.c...
+compiling stm32f4xx_it.c...
+compiling stm32f4xx_hal_msp.c...
+compiling gpio.c...
+compiling stm32f4xx_hal_timebase_tim.c...
+compiling stm32f4xx_hal_flash_ex.c...
 compiling stm32f4xx_hal_tim.c...
-compiling stm32f4xx_hal_pwr.c...
-compiling stm32f4xx_hal_exti.c...
-compiling stm32f4xx_hal_dma.c...
-compiling stm32f4xx_hal_pwr_ex.c...
-compiling stm32f4xx_hal_gpio.c...
-compiling stm32f4xx_hal_cortex.c...
-compiling system_stm32f4xx.c...
+compiling stm32f4xx_hal_rcc_ex.c...
+compiling main.c...
+../Core/Src/main.c(349): warning:  #550-D: variable "k0"  was set but never used
+  	KeyTypeDef k0;
+../Core/Src/main.c: 1 warning, 0 errors
 compiling stm32f4xx_hal.c...
-compiling stm32f4xx_hal_dma_ex.c...
-compiling joint.c...
-..\Modules\Joint\joint.c(18): warning:  #177-D: variable "home_speed"  was declared but never referenced
-  static float home_speed  = 0.4f;  // 减速后角速度 rad/s
-..\Modules\Joint\joint.c(19): warning:  #177-D: variable "home_torque"  was declared but never referenced
-  static float home_torque = 1.0f;  // 减速后力矩 Nm
-..\Modules\Joint\joint.c(20): warning:  #177-D: variable "UP_LIMIT"  was declared but never referenced
-  static float UP_LIMIT    = 20.0f; // 减速后角度 °
-..\Modules\Joint\joint.c(21): warning:  #177-D: variable "DOWN_LIMIT"  was declared but never referenced
-  static float DOWN_LIMIT  = 80.0f; // 减速后角度 °
-..\Modules\Joint\joint.c(22): warning:  #177-D: variable "TOLERANCE"  was declared but never referenced
-  static float TOLERANCE   = -5.0f;  // 容差 °
-..\Modules\Joint\joint.c: 5 warnings, 0 errors
+compiling stm32f4xx_hal_exti.c...
 compiling A1_motor_drive.c...
 ..\Modules\Motor\Motor_A1\A1_motor_drive.c(35): warning:  #61-D: integer operation result is out of range
           xbit = 1 << 31;
@@ -73,11 +57,30 @@ compiling A1_motor_drive.c...
 ..\Modules\Motor\Motor_A1\A1_motor_drive.c(189): warning:  #1035-D: single-precision operand implicitly converted to double-precision
           Date_left.Pos      = (float) (Date_left.motor_recv_data.Mdata.Pos / (16384.0f/2.0f/PI));      
 ..\Modules\Motor\Motor_A1\A1_motor_drive.c: 3 warnings, 0 errors
+compiling stm32f4xx_hal_gpio.c...
+compiling stm32f4xx_hal_cortex.c...
+compiling stm32f4xx_hal_pwr_ex.c...
+compiling stm32f4xx_hal_pwr.c...
+compiling system_stm32f4xx.c...
+compiling stm32f4xx_hal_dma.c...
+compiling joint.c...
+..\Modules\Joint\joint.c(19): warning:  #177-D: variable "home_speed"  was declared but never referenced
+  static float home_speed  = 0.4f;  // 减速后角速度 rad/s
+..\Modules\Joint\joint.c(20): warning:  #177-D: variable "home_torque"  was declared but never referenced
+  static float home_torque = 1.0f;  // 减速后力矩 Nm
+..\Modules\Joint\joint.c(21): warning:  #177-D: variable "UP_LIMIT"  was declared but never referenced
+  static float UP_LIMIT    = 20.0f; // 减速后角度 °
+..\Modules\Joint\joint.c(22): warning:  #177-D: variable "DOWN_LIMIT"  was declared but never referenced
+  static float DOWN_LIMIT  = 80.0f; // 减速后角度 °
+..\Modules\Joint\joint.c(23): warning:  #177-D: variable "TOLERANCE"  was declared but never referenced
+  static float TOLERANCE   = -5.0f;  // 容差 °
+..\Modules\Joint\joint.c: 5 warnings, 0 errors
+compiling stm32f4xx_hal_dma_ex.c...
 compiling stm32f4xx_hal_uart.c...
 linking...
-Program Size: Code=10120 RO-data=976 RW-data=104 ZI-data=32880  
+Program Size: Code=12044 RO-data=1072 RW-data=116 ZI-data=33588  
 FromELF: creating hex file...
-"test\test.axf" - 0 Error(s), 8 Warning(s).
+"test\test.axf" - 0 Error(s), 9 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -101,7 +104,7 @@ Package Vendor: Keil
 
    * Component: ARM::CMSIS:CORE:5.6.0
       Include file:  CMSIS/Core/Include/tz_context.h
-Build Time Elapsed:  00:00:14
+Build Time Elapsed:  00:00:16
 </pre>
 </body>
 </html>
