完善了发送命令
但是有时会出现急停的时候，还是执行了一步位置控制指令，发送了第一个时刻的位置信息，会导致电机猛转，需要解决

--- a/MDK-ARM/test/test.build_log.htm
+++ b/MDK-ARM/test/test.build_log.htm
@@ -22,38 +22,33 @@ Dialog DLL:      TCM.DLL V1.56.4.0
  
 <h2>Project:</h2>
 D:\STM32_dev\test\MDK-ARM\test.uvprojx
-Project File Date:  09/08/2025
+Project File Date:  09/09/2025
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 7 (build 960)', folder: 'D:\keil5\ARM\ARMCC\Bin'
 Rebuild target 'test'
 assembling startup_stm32f407xx.s...
+compiling gpio.c...
 compiling stm32f4xx_hal_flash_ramfunc.c...
-compiling stm32f4xx_hal_timebase_tim.c...
+compiling tim.c...
 compiling main.c...
-../Core/Src/main.c(349): warning:  #550-D: variable "k0"  was set but never used
-  	KeyTypeDef k0;
-../Core/Src/main.c: 1 warning, 0 errors
+compiling calc.c...
+compiling stm32f4xx_hal_flash.c...
 compiling stm32f4xx_it.c...
+compiling stm32f4xx_hal_timebase_tim.c...
+compiling key_state_machine.c...
+compiling stm32f4xx_hal_msp.c...
+compiling usart.c...
+compiling stm32f4xx_hal_rcc.c...
 compiling stm32f4xx_hal_flash_ex.c...
 compiling stm32f4xx_hal_rcc_ex.c...
 compiling stm32f4xx_hal_tim_ex.c...
-compiling stm32f4xx_hal_flash.c...
 compiling stm32f4xx_hal_tim.c...
-compiling usart.c...
-compiling key_state_machine.c...
-compiling gpio.c...
-compiling tim.c...
-compiling stm32f4xx_hal_msp.c...
-compiling stm32f4xx_hal_rcc.c...
-compiling calc.c...
 compiling system_stm32f4xx.c...
-compiling stm32f4xx_hal_exti.c...
-compiling stm32f4xx_hal_pwr.c...
-compiling stm32f4xx_hal_cortex.c...
-compiling stm32f4xx_hal_pwr_ex.c...
 compiling stm32f4xx_hal_gpio.c...
+compiling stm32f4xx_hal_dma.c...
 compiling stm32f4xx_hal.c...
+compiling stm32f4xx_hal_pwr_ex.c...
 compiling A1_motor_drive.c...
 ..\Modules\Motor\Motor_A1\A1_motor_drive.c(35): warning:  #61-D: integer operation result is out of range
           xbit = 1 << 31;
@@ -62,8 +57,9 @@ compiling A1_motor_drive.c...
 ..\Modules\Motor\Motor_A1\A1_motor_drive.c(189): warning:  #1035-D: single-precision operand implicitly converted to double-precision
           Date_left.Pos      = (float) (Date_left.motor_recv_data.Mdata.Pos / (16384.0f/2.0f/PI));      
 ..\Modules\Motor\Motor_A1\A1_motor_drive.c: 3 warnings, 0 errors
-compiling stm32f4xx_hal_dma_ex.c...
 compiling joint.c...
+..\Modules\Joint\joint.c(38): warning:  #1035-D: single-precision operand implicitly converted to double-precision
+      if (fabsf(zero_left_ID0) > 1e-6)
 ..\Modules\Joint\joint.c(19): warning:  #177-D: variable "home_speed"  was declared but never referenced
   static float home_speed  = 0.4f;  // 减速后角速度 rad/s
 ..\Modules\Joint\joint.c(20): warning:  #177-D: variable "home_torque"  was declared but never referenced
@@ -74,11 +70,14 @@ compiling joint.c...
   static float DOWN_LIMIT  = 80.0f; // 减速后角度 °
 ..\Modules\Joint\joint.c(23): warning:  #177-D: variable "TOLERANCE"  was declared but never referenced
   static float TOLERANCE   = -5.0f;  // 容差 °
-..\Modules\Joint\joint.c: 5 warnings, 0 errors
-compiling stm32f4xx_hal_dma.c...
+..\Modules\Joint\joint.c: 6 warnings, 0 errors
+compiling stm32f4xx_hal_exti.c...
+compiling stm32f4xx_hal_dma_ex.c...
+compiling stm32f4xx_hal_cortex.c...
+compiling stm32f4xx_hal_pwr.c...
 compiling stm32f4xx_hal_uart.c...
 linking...
-Program Size: Code=11780 RO-data=1072 RW-data=116 ZI-data=33588  
+Program Size: Code=10888 RO-data=1072 RW-data=116 ZI-data=41612  
 FromELF: creating hex file...
 "test\test.axf" - 0 Error(s), 9 Warning(s).
 
@@ -104,7 +103,7 @@ Package Vendor: Keil
 
    * Component: ARM::CMSIS:CORE:5.6.0
       Include file:  CMSIS/Core/Include/tz_context.h
-Build Time Elapsed:  00:00:15
+Build Time Elapsed:  00:00:13
 </pre>
 </body>
 </html>
