单个电机尝试成功
需要进一步调整程序结构，变成控制多个电机

--- a/MDK-ARM/test/test.build_log.htm
+++ b/MDK-ARM/test/test.build_log.htm
@@ -28,38 +28,31 @@ Project File Date:  09/09/2025
 *** Using Compiler 'V5.06 update 7 (build 960)', folder: 'D:\keil5\ARM\ARMCC\Bin'
 Rebuild target 'test'
 assembling startup_stm32f407xx.s...
-compiling gpio.c...
-compiling stm32f4xx_hal_flash_ramfunc.c...
-compiling tim.c...
-compiling main.c...
-compiling calc.c...
-compiling stm32f4xx_hal_flash.c...
 compiling stm32f4xx_it.c...
-compiling stm32f4xx_hal_timebase_tim.c...
-compiling key_state_machine.c...
+compiling tim.c...
+compiling calc.c...
+compiling stm32f4xx_hal_flash_ex.c...
+compiling stm32f4xx_hal_flash.c...
+compiling stm32f4xx_hal_tim_ex.c...
+compiling main.c...
+compiling gpio.c...
 compiling stm32f4xx_hal_msp.c...
 compiling usart.c...
+compiling key_state_machine.c...
+compiling stm32f4xx_hal_flash_ramfunc.c...
+compiling stm32f4xx_hal_timebase_tim.c...
 compiling stm32f4xx_hal_rcc.c...
-compiling stm32f4xx_hal_flash_ex.c...
 compiling stm32f4xx_hal_rcc_ex.c...
-compiling stm32f4xx_hal_tim_ex.c...
 compiling stm32f4xx_hal_tim.c...
-compiling system_stm32f4xx.c...
-compiling stm32f4xx_hal_gpio.c...
+compiling stm32f4xx_hal_exti.c...
+compiling stm32f4xx_hal_dma_ex.c...
 compiling stm32f4xx_hal_dma.c...
+compiling stm32f4xx_hal_cortex.c...
 compiling stm32f4xx_hal.c...
-compiling stm32f4xx_hal_pwr_ex.c...
-compiling A1_motor_drive.c...
-..\Modules\Motor\Motor_A1\A1_motor_drive.c(35): warning:  #61-D: integer operation result is out of range
-          xbit = 1 << 31;
-..\Modules\Motor\Motor_A1\A1_motor_drive.c(35): warning:  #68-D: integer conversion resulted in a change of sign
-          xbit = 1 << 31;
-..\Modules\Motor\Motor_A1\A1_motor_drive.c(189): warning:  #1035-D: single-precision operand implicitly converted to double-precision
-          Date_left.Pos      = (float) (Date_left.motor_recv_data.Mdata.Pos / (16384.0f/2.0f/PI));      
-..\Modules\Motor\Motor_A1\A1_motor_drive.c: 3 warnings, 0 errors
+compiling stm32f4xx_hal_uart.c...
 compiling joint.c...
 ..\Modules\Joint\joint.c(38): warning:  #1035-D: single-precision operand implicitly converted to double-precision
-      if (fabsf(zero_left_ID0) > 1e-6)
+      if (fabsf(zero_left_ID0) <= 1e-6)
 ..\Modules\Joint\joint.c(19): warning:  #177-D: variable "home_speed"  was declared but never referenced
   static float home_speed  = 0.4f;  // 减速后角速度 rad/s
 ..\Modules\Joint\joint.c(20): warning:  #177-D: variable "home_torque"  was declared but never referenced
@@ -71,13 +64,20 @@ compiling joint.c...
 ..\Modules\Joint\joint.c(23): warning:  #177-D: variable "TOLERANCE"  was declared but never referenced
   static float TOLERANCE   = -5.0f;  // 容差 °
 ..\Modules\Joint\joint.c: 6 warnings, 0 errors
-compiling stm32f4xx_hal_exti.c...
-compiling stm32f4xx_hal_dma_ex.c...
-compiling stm32f4xx_hal_cortex.c...
+compiling system_stm32f4xx.c...
 compiling stm32f4xx_hal_pwr.c...
-compiling stm32f4xx_hal_uart.c...
+compiling stm32f4xx_hal_gpio.c...
+compiling A1_motor_drive.c...
+..\Modules\Motor\Motor_A1\A1_motor_drive.c(35): warning:  #61-D: integer operation result is out of range
+          xbit = 1 << 31;
+..\Modules\Motor\Motor_A1\A1_motor_drive.c(35): warning:  #68-D: integer conversion resulted in a change of sign
+          xbit = 1 << 31;
+..\Modules\Motor\Motor_A1\A1_motor_drive.c(189): warning:  #1035-D: single-precision operand implicitly converted to double-precision
+          Date_left.Pos      = (float) (Date_left.motor_recv_data.Mdata.Pos / (16384.0f/2.0f/PI));      
+..\Modules\Motor\Motor_A1\A1_motor_drive.c: 3 warnings, 0 errors
+compiling stm32f4xx_hal_pwr_ex.c...
 linking...
-Program Size: Code=10888 RO-data=1072 RW-data=116 ZI-data=41612  
+Program Size: Code=11440 RO-data=1072 RW-data=112 ZI-data=49648  
 FromELF: creating hex file...
 "test\test.axf" - 0 Error(s), 9 Warning(s).
 
@@ -103,7 +103,7 @@ Package Vendor: Keil
 
    * Component: ARM::CMSIS:CORE:5.6.0
       Include file:  CMSIS/Core/Include/tz_context.h
-Build Time Elapsed:  00:00:13
+Build Time Elapsed:  00:00:15
 </pre>
 </body>
 </html>
